Fixed alert modal not wrapping text

--- a/src/vue3gui/style/util.scss
+++ b/src/vue3gui/style/util.scss
@@ -58,6 +58,10 @@
     white-space: nowrap;
 }
 
+.wrap {
+    white-space: normal;
+}
+
 .pre {
     white-space: pre;
 }
